ndslabs/gluster-client-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: glusterfs-client
  labels:
    app: glusterfs-client
spec:
  template:
    metadata:
      labels:
        name: glusterfs-client
    spec:
      nodeSelector:
        ndslabs-node-role: compute
      hostPID: true
      hostIPC: true
      hostNetwork: true
      containers:
        - image: ndslabs/gluster:test
          imagePullPolicy: Always
          name: glusterfs-client
          command:
            - client
          securityContext:
            privileged: true
          volumeMounts:
            - name: hostroot
              mountPath: /media/host
#              readOnly: true
            - name: ndslabs
              mountPath: /ndslabs/data
            - name: run
              mountPath: /run
            - name: dev
              mountPath: /dev
      volumes:
        - name: hostroot
          hostPath:
              path: /
        - name: ndslabs
          hostPath:
              path: /ndslabs/data
        - name: run
          hostPath:
              path: /run
        - name: dev
          hostPath:
              path: /dev
