ndslabs/gluster-server-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: glusterfs-server
  labels:
    app: glusterfs-server
spec:
  template:
    metadata:
      labels:
        name: glusterfs-server
    spec:
      nodeSelector:
        ndslabs-node-role: glfs
      hostPID: true
      hostIPC: true
      hostNetwork: true
      containers:
        - image: ndslabs/gluster:test
          imagePullPolicy: Always
          name: glusterfs-server
          securityContext:
            privileged: true
          volumeMounts:
            - name: hostroot
              mountPath: /media/host
#              readOnly: true
            - name: glfs
              mountPath: /media/brick0
            - name: run
              mountPath: /run
            - name: dev
              mountPath: /dev
      volumes:
        - name: hostroot
          hostPath:
              path: /
        - name: glfs
          hostPath:
              path: /media/brick0
        - name: run
          hostPath:
              path: /run
        - name: dev
          hostPath:
              path: /dev
