ndslabs/default-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ndslabs-ingress
spec:
  tls:
  - hosts:
    - www.cwtest.ndslabs.org
    secretName: ndslabs-tls-secret
  rules:
  - host: www.cwtest.ndslabs.org
    http:
      paths:
      - path: /api
        backend:
          serviceName: ndslabs-apiserver
          servicePort: 30001
      - path: /
        backend:
          serviceName: ndslabs-gui
          servicePort: 80
