ndslabs/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ndslabs-ingress
  namespace: demo
spec:
  rules:
  - host: s38oqbclowder.willis8.ndslabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: s38oqb-clowder
          servicePort: 9000
